--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript Lab</title>
   </head>
-
   <body>
+    <!-- Form for entering dog information -->
+    <form id="dogForm">
+      <label> Dog Name: <input type="text" name="dogName" id="dogName" /></label
+      ><br />
+      <label>
+        Dog Breed: <input type="text" name="dogBreed" id="dogBreed" /></label
+      ><br />
+      <input type="submit" value="Submit" />
+    </form>
+
+    <!-- Div for displaying the response or errors from the API -->
+    <div id="display"></div>
+
     <script src="index.js"></script>
   </body>
-
 </html>
